# courses

./: .gitignore  2025-11-13 Cloud Labs Hamburg 🧪 Gemini Multimodality and Long Context - Google Slides.html  CLAUDE.md  README.md
.claude/: settings.json
Web-Technologies/: .gitignore  FHDW_WTA_Stehr_1_1_0_WS2025.md  FHDW_WTA_Uebungen_Stehr_1_0_0_WS2025.md
agent-project/: README.md  openapi.json
exam-trainer/: .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  WIRTSCHAFTSRECHT-PLAN.md  docker-compose.yml  index.html  package.json  vite.config.ts
exam-trainer/backend/: .gitignore  Dockerfile  pyproject.toml
exam-trainer/backend/src/exam_trainer_api/: __init__.py  main.py
exam-trainer/src/backend/: Dockerfile  pyproject.toml
exam-trainer/src/backend/src/exam_trainer_api/: __init__.py  main.py
exam-trainer/src/backend/src/exam_trainer_api/models/: __init__.py  schemas.py
exam-trainer/src/backend/src/exam_trainer_api/routers/: __init__.py  evaluate.py  hints.py  progress.py  recommend.py
exam-trainer/src/backend/src/exam_trainer_api/services/: __init__.py  gemini.py  prompts.py
exam-trainer/src/dataloader/: .gitignore  Dockerfile  pyproject.toml
exam-trainer/src/dataloader/configs/: ipdg.yaml
exam-trainer/src/dataloader/resources/markdown/ipdg/: CRM-Uebungsaufgabe.md  Netflix-BigData-CaseStudy.md  SAP-SD-Vertrieb.md
exam-trainer/src/dataloader/resources/pdf/: README.md
exam-trainer/src/dataloader/src/dataloader/: __init__.py  cli.py  enrich.py  extract.py  filter.py  merge.py  render.py
kubernetes-workshop/: db-instance.yaml  (+5 more)
(+473 files in other folders)
